--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ header img{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     min-width: 200px;
     min-height: 400px;
     max-height: 550px;
