--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 :root{
     --green:#1a535c;
     --light-green:#4ecdc4;
@@ -9,7 +10,7 @@
     --sec-color:#1a535c;
 }
 *,*::before,*::after{
-    font-family: 'poppins';
+    font-family: 'Poppins', sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -155,7 +156,7 @@ footer{
     position: fixed;
     height: 100%;
     width: 100%;
-    background-color:var(--main-color);
+    background-color:var(--green);
     display: flex;
     flex-direction: column;
     justify-content: center;
